docs/references/v2.1/システム定義書_v2.md
# solosto システム定義書 v2（個人用MVP）

> **アプリ名**: solosto（そろそろ + lost + stock。「そろそろ在庫が切れる」を一語に）
>
> v1からの主な変更点：個人利用前提への振り直し（グループ共有はDBに箱だけ残しUI/APIは見送り）、個数ベースのサイクル算出、商品3軸フラグ設計、買い物リスト=チェックリスト、通知のスヌーズ/時刻指定/信頼性3層対策。
>
> **【v2.1 差分】** 追跡単位（tracking_scope）を追加。カテゴリ単位サイクル（銘柄横断の通知）に対応。該当箇所は「【v2.1】」マーカーで明示（主に 2.10 / 3章 categories・purchase_logs / 5.2 / 7章）。

---

## 1. 要件定義

### 1.1 システムの目的

- 日用品や消耗品の在庫管理を効率化し、「買い忘れ」と「無駄買い」を防止する。
- ユーザーが入力した実価格に基づき、ECサイト間や過去との価格比較を行い、最適な購入タイミングを把握する。

### 1.2 ターゲット・プラットフォーム

- **メイン**: iPhone（Safari PWA、ホーム画面追加）
    - OS通知（Web Push）とバッジを重視。
- **サブ**: PC（Web）
    - 一括登録や詳細な履歴確認用途。
- **将来**: iOSネイティブアプリ（Swift）
    - Supabase共通基盤でスムーズな移行を前提。

### 1.3 利用形態の方針（v2で確定）

- **個人利用を前提**とする。家族共有などのマルチユーザー機能はMVPでは作らない。
- ただし将来の共有拡張に備え、**DBには `group_id` の層を残す**（1ユーザー1グループ自動生成のみ）。招待UI・ユーザーメンテ系の画面/APIはMVPで実装しない。
- **通知はプル型を主、Web Pushを従**とする。iOSのWeb Pushは配信が不安定なため、「アプリを開けば必ず最新の買うべきリストが見える」ことを信頼性のベースに置き、Pushは気づくきっかけと位置づける。

### 1.4 核心的要件

- **購入サイクル管理**
    - 購入実績から「1個あたり消費日数」を算出し、ロット（入数）違いを吸収して次回購入目安日を出す。
    - 自動算出値は手動上書き可能。商品ごとに自動/手動を選択できる。
- **通知の柔軟性**
    - 定期購入品と単発購入品を区別。
    - 商品ごとに通知ON/OFF（恒久ミュート）と一時スヌーズが可能。
    - 通知時刻はユーザーが1時間刻みで設定。1日1通にまとめる。
- **価格管理**
    - 手動入力の「購入金額 / 総個数」から単価を算出。
    - 底値（最安 unit_price）は purchase_logs から都度集計。自分の過去の買値の中での相対評価。
- **ディープリンク**
    - 登録URLから Amazon、楽天、Temu、Shein 等の公式アプリへ直接遷移。
- **検索性**
    - 注文日、カテゴリ、プラットフォーム、商品名などで多角的にフィルタ。

---

## 2. 機能仕様

### 2.1 認証・ユーザー管理

- **サインアップ / サインイン**: メールアドレス + パスワード認証。
- **グループ機能（内部のみ）**: 初回登録時に1ユーザー1グループを自動生成。招待・メンテUIは無し。
- **プロファイル設定**:
    - 表示名設定。
    - Web Push購読（push_subscriptions、複数デバイス）管理。
    - 通知時刻（notify_time）・タイムゾーン設定。

#### 購読の登録フロー（v2で確定）

- **初回ログイン後**: 自前の案内（「買い忘れ防止に通知が便利です」）→ OKした人にだけブラウザ許可ダイアログ。誤って拒否させる事故を防ぐ（一度ブラウザ拒否されると再許可が困難なため）。
- **設定画面（SCR-003）**: 常設の「通知を有効にする」入り口。スキップ・拒否後もやり直せる。
- **状態表示はデバイス単位**（「このデバイスでは通知ON / 有効にする」）。COM-003 が今のデバイス分を判定。
- **再登録はMVPでは手動のみ**。失効でsubscriptionが無いデバイスは、設定画面から再度有効化して作り直す（自動再購読は将来）。

### 2.2 商品管理

商品は **3つの独立したフラグ** で状態を表す。

| フラグ | 値 | 意味 |
| --- | --- | --- |
| `type` | `recurring` / `spot` | 商品の性質。定期か単発か。**デフォルト = recurring** |
| `status` | `pending` / `tracking` / `idle` | 現在のフェーズ |
| `is_notify_enabled` | true / false | 恒久ミュート。種別変更で巻き込まれない独立フラグ |

- **商品登録**: 商品名 / カテゴリ / 購入単位 / 標準入数（default_units_per_pack）/ 種別。
- **通知設定**: 商品ごとに通知ON/OFF（恒久ミュート）切り替え。
- **URL管理**: 購入先URL登録、ECプラットフォームへのディープリンク対応。
- **種別変更**: `recurring` ⇔ `spot` を後から変更可能。変更時 `is_notify_enabled` は書き換えない（戻したとき通知状態が保たれる）。
- **目安更新**: 購入実績に基づき次回購入目安日を自動算出。自動値は手動上書き可。

### 2.3 個数・単価設計（v2で確定）

ロット（入数）違いを吸収するため、購入記録に総個数を持つ。

- **products**: `default_units_per_pack`（標準入数）を商品マスタに保持。購入登録時に自動補完。
- **purchase_logs**:
    - `pack_quantity`（パック数）
    - `units_per_pack`（その時の入数。**記録時点の値をコピー保存**。後でマスタを変えても過去の単価計算が狂わない）
    - `total_units` = `pack_quantity × units_per_pack`
    - `unit_price` = `price ÷ total_units`
- 入力は「総個数だけ」でも動作可能。パック分解は任意。

### 2.4 購入サイクル算出（v2で確定）

「1個あたり消費日数」ベースで、ロット差を吸収する。

```
1個あたり消費日数 = 購入間隔（前回→今回の日数） ÷ 前回の total_units
next_order_date = 前回購入日 + （1個あたり消費日数 × 今回の total_units）
```

- 初回購入時点では間隔が不明 → tracking に入れず idle へ。**2回目の購入で初めてサイクル確定**。
- 自動算出値は手動上書き可能。商品ごとに「自動 / 手動固定」を選べる（cycle_mode）。
- サイクル算出は `type = recurring` のときのみ実行（spotでは走らせない）。

#### cycle_mode（自動 / 手動）の扱い（v2で確定）

- **保持**: products に `cycle_mode`（auto / manual）と `per_unit_cycle_days` を持つ。auto時は購入のたびに再計算、manual時は手動値で固定。
- **参考自動値は専用カラムを持たず、purchase_logs から都度集計**（価格設計と同じ「真実の源は購入記録」の方針）。
- **next_order_date は cycle_mode に従う**（auto=自動値 / manual=手動値）× total_units。参考自動値は表示専用で、通知・リスト判定には使わない。

#### 切り替えUI（商品編集画面 SCR-012 の一項目）

```
次回購入サイクル
 ○ 自動（購入履歴から算出）  ← 現在: 約45日
 ○ 手動で指定              [ 45 ] 日
```

- 「自動」選択中は現在の算出値を参考表示。入力欄は無効。
- 「手動」に切り替えると入力欄が有効化。**初期値に自動算出値が入った状態**で出す（ゼロから考えなくてよい）。
- 手動固定中は参考の自動値を併記（例「手動45日に固定中／最新実績だと約38日」）。実態とのズレに気づけるが、計算には使わない。

### 2.5 買い物リスト（チェックリスト運用）

リストは**置き場**。却下や期限の概念はなく、買うまで居座り、買ったらチェックして消える。

- トップページに「買うべきもの」を表示：
    - 自動で上がるもの（`next_order_date <= 今日`）
    - 手動投入したもの（`status = pending`）
  を同じリストに並べる。
- 既存品も新規品（名前だけ即登録）も手動投入できる。
- ディープリンクでECアプリへ遷移 → 購入 → アプリに戻って「買った」を手動チェック → purchase_logs に記録。
- `recurring` は次回目安を再計算してループへ、`spot` はそのまま idle へ。

### 2.6 検索

- キーワード検索（商品名）、カテゴリ絞り込み、プラットフォーム別、注文日期間指定。

### 2.7 価格履歴・比較（v2で確定）

このアプリの価格比較は **自分の購入履歴の中での相対評価** とする。リアルタイムのEC価格は扱わない（今の価格はディープリンク先で実物を確認）。

#### 基本方針

- **底値 = 最安 unit_price**（1個あたり単価ベース。ロット差を吸収）。
- **保持方法は都度集計**（products に底値カラムは持たず、purchase_logs から `MIN(unit_price)` で算出）。ログ削除時も自動で正しい底値になり、二重持ちの不整合が起きない。「真実の源は購入記録」の方針に統一。
- **判断は全体底値のみ**で行う。プラットフォーム別の底値比較はしない（platform は記録・検索フィルタ用には保持するが、底値判断には使わない）。

#### 価格比較ビュー（SCR-022）で見せる指標

すべて purchase_logs からの集計で生成：

- 底値（`MIN(unit_price)`）+ その購入日
- 平均（`AVG(unit_price)`）
- 直近の購入 unit_price と、それが底値より何%高い/安いか
- 判定ラベル（「買い時！」等）は出さない。リアルタイム価格がない以上、相場の物差しを渡すに留める。

### 2.8 通知（v2で確定）

#### 発火条件（最終判定式）

```
通知を飛ばす = type = recurring
  かつ is_notify_enabled = true         （恒久ミュートでない）
  かつ (notify_snoozed_until が null または 今日 > notify_snoozed_until)  （スヌーズ中でない）
  かつ next_order_date <= 今日
```

#### タイミング・頻度

- **毎時Cron + notify_time 一致で発火**（v1のAM8:00固定を置き換え）。1時間刻みでユーザーが時刻を選べる。
- **1日1通にまとめる**（対象が複数でも1通）。
- Vercel CronはUTC基準のため、profiles の timezone（デフォルト "Asia/Tokyo"）でローカル時刻を変換。

#### 通知の中身

- タイトル：件数で要約（例「買うべきもの 3件」）。
- 本文：商品名を羅列（例「醤油・トイレ紙・洗剤」）。多い時は「先頭数件 + ほかN件」で丸める。
- 価格などの判断材料は通知に載せず、アプリ内（リスト/詳細）で見せる。

#### スヌーズ

- `notify_snoozed_until`（日付カラム）で表現。`is_notify_enabled`（恒久ミュート）とは別物。
- 期間はユーザーが選ぶ（1週間 / 1ヶ月 / 日付指定）。
- 操作はアプリ内（商品詳細/リスト）から。通知ボタンからのスヌーズはMVP見送り。

#### アプリ内通知センター

- 直近1週間の通知履歴を保持、既読/未読管理。
- 1週間経過した通知は物理削除（バッチ）。

### 2.9 信頼性対策（3層構造／v2で確定）

iOSのWeb Pushは「届かないことがある」を仕様として受け入れ、届かなくても買い忘れない設計とする。

1. **バッジ**: 数字 = 現在の pending 件数（タスク残量）。Push受信時（service workerが `setAppBadge`）+ アプリ起動時（サーバー問い合わせで再設定）の二重経路で更新。「買った」で減り、0件で `clearAppBadge()`。件数は API-030 を流用して取得。
2. **プル型（最後の砦）**: アプリを開けば通知に依存せず最新の買うべきリストを再計算表示。
3. **送信ログ + 失効検知**: notifications に `delivery_status`（sent / failed / expired）を保持。送信は push_subscriptions の全行に対して行い、各行ごとに判定する。

```
各 push_subscriptions 行に送信
 ├ 成功     → last_used_at 更新 / delivery_status = sent
 ├ 410/404  → その行だけ削除（他デバイスは残す）/ delivery_status = expired
 └ その他   → リトライ対象（行は残す）/ delivery_status = failed
```

全行が消えた（0行）= どのデバイスにも届かない状態 → 「通知が止まっています。再度有効化してください」をアプリ内に表示。

> 補足：`sent`（201）はプッシュサービスが受理しただけで端末表示の保証ではない。「端末側で消えた」ケースはバッジとプル型でカバーする。

### 2.10 追跡単位（tracking_scope）／カテゴリ単位サイクル（v2.1 追加）

> **【v2.1 変更差分】** 「銘柄が毎回変わる商品（赤ワイン等）では、商品単位サイクルが永遠に確定せず通知が飛ばない」問題への対応。商品単位/カテゴリ単位の追跡を選べるようにする。v2で「MVP対象外」としていた target_type は本設計で置き換える。

#### 解く問題

例: 赤ワインを前々回 MAPU、前回 OSCO で購入（別商品だが消費の実体は「赤ワイン」1つ）。商品単位サイクルは「同一商品の2回目購入」で確定するため、毎回銘柄が変わると確定せず通知が飛ばない。一方コスメ（SK-II_001, VT_001）は商品単位で繰り返し買うので商品単位が正しい。**両者が共存し、かつ切り替えても壊れない設計が要る。**

#### 設計

- **categories に `tracking_scope`（product / category）を持つ**。
    - `product`: カテゴリ内の商品を**商品単位**で追跡（コスメ。SK-II_001 と VT_001 は別サイクル）。
    - `category`: カテゴリ**全体で1つ**を追跡（トイレ紙、赤ワイン。銘柄横断）。
- **カテゴリはフラット1階層**（= 追跡グループ）。階層カテゴリは持たない。特殊な子は別カテゴリに分けて対応（商品ごとの上書き機構は不要）。
- **サイクル・状態（tracking/idle）は専用カラムを持たず purchase_logs から都度集計**。scope切り替えは「集計の GROUP BY を商品にするかカテゴリにするか」の違いだけ。購入履歴は無傷のため、行き来しても不整合が起きない（「真実の源は購入記録」の徹底）。
    - category時: カテゴリの purchase_logs を全銘柄まとめて集計 → カテゴリのサイクル。
    - product時: 商品ごとに集計 → 各商品のサイクル。

#### 通知フラグ（切り替えで巻き込まない）

- `is_notify_enabled` は**商品・カテゴリ両方が持ち**、scope に応じて見る側が切り替わる（product=商品の値 / category=カテゴリの値）。切り替えてもフラグ自体は両方残るので設定は保たれる。

#### 通知発火式（scope拡張版）

```
[product scope] 商品ごとに:
  type=recurring & 商品.is_notify_enabled & スヌーズ外 & next_order_date到来
[category scope] カテゴリごとに:
  カテゴリ.is_notify_enabled & スヌーズ外 & next_order_date到来（銘柄横断で集計）
```

#### pending（手動投入）とscope切り替え

- pending（買い物リストへの手動投入＝まだ買っていない意思）は scope に応じて商品 or カテゴリが持つ。
- **scope切り替え時は pending をリセット**（引き継がない）。「追跡方法を変えたのでリストから外しました。必要なら入れ直してください」と案内。切り替えは稀なイベントのため、引き継ぎロジックを持たず不整合をゼロにする割り切り。

#### 銘柄とURL（商品名と実物のズレを起こさない）

- category時も**購入履歴は銘柄（商品）ごとに記録**（MAPUを買えばMAPUと記録）。商品名と実物のズレは起きない。
- 買い足し時は履歴から**銘柄一覧を集計して提示**（銘柄名＋URL＋最終購入日＋価格）、好きな銘柄のURLでディープリンク。「前回OSCO/前々回MAPU、今回はMAPUに戻す」も選べる。URLは購入履歴側（purchase_logs）に持つため後から書き換わらず不整合が起きない。

---

## 3. データベース設計（Supabase / PostgreSQL）

### groups

- id (UUID)
- name (TEXT)
- created_at (TIMESTAMP)
- deleted_at (TIMESTAMP)

> 内部的に1ユーザー1グループを自動生成。招待機能はMVP対象外。

### profiles

- id (UUID, FK → Auth.users)
- group_id (UUID, FK → groups.id)
- display_name (TEXT)
- **notify_time (TIME)** ← 通知時刻（1時間刻み）
- **timezone (TEXT, default 'Asia/Tokyo')** ← Cron時刻変換用

> push_subscription は複数デバイス対応のため専用テーブルへ分離（下記）。

### push_subscriptions（v2で新規）

複数デバイス（iPhone / PC）で通知を受けるため、1ユーザーに複数行を持つ。

- id (UUID)
- user_id (UUID, FK)
- subscription (JSONB) ← エンドポイント + 鍵
- device_label (TEXT, nullable) ← 「iPhone」「PC」等の識別（任意）
- created_at (TIMESTAMP)
- last_used_at (TIMESTAMP, nullable) ← 最後に送信成功した日時

> 送信時はユーザーの全行に送る。410/404 が返った行だけ削除（他デバイスは残す）。0行になったらアプリ内告知。

### categories

- id (UUID)
- group_id (UUID, FK)
- name (TEXT)
- **tracking_scope (TEXT: 'product' | 'category', default 'product')** ← v2.1追加。追跡単位
- **is_notify_enabled (BOOLEAN)** ← v2.1追加。category scope時の通知ON/OFF（商品側とは独立）
- **notify_snoozed_until (DATE, nullable)** ← v2.1追加。category scope時の一時スヌーズ
- **next_order_date (DATE, nullable)** ← v2.1追加。category scope時の次回目安日（サイクルは集計、これは表示・判定用キャッシュとして可。基本は集計導出）
- **cycle_mode (TEXT: 'auto' | 'manual', nullable)** ← v2.1追加。category scope時のサイクル方式
- **status (TEXT: 'pending' | 'tracking' | 'idle', nullable)** ← v2.1追加。category scope時の状態。tracking/idleは集計導出、pendingのみ明示保持
- deleted_at (TIMESTAMP)

> **【v2.1】** category scope のカテゴリは、商品と同等の追跡属性を持つ。productスコープのカテゴリでは these は未使用。サイクル・底値・tracking/idle は purchase_logs から都度集計（専用カラムを持たない方針は商品と同じ）。

### products

- id (UUID)
- group_id (UUID, FK)
- category_id (UUID, FK)
- name (TEXT)
- purchase_url (TEXT)
- **type (TEXT: 'recurring' | 'spot', default 'recurring')** ← 商品の性質
- **status (TEXT: 'pending' | 'tracking' | 'idle')** ← 現在フェーズ
- is_notify_enabled (BOOLEAN) ← 恒久ミュート
- **notify_snoozed_until (DATE, nullable)** ← 一時スヌーズ
- base_unit (TEXT) ← 個、ml、セット等
- **default_units_per_pack (NUMERIC)** ← 標準入数
- **cycle_mode (TEXT: 'auto' | 'manual')** ← サイクル算出方式。manual時はper_unit_cycle_daysを固定値として使う
- current_cycle_days (INT) ← 旧来の参考値（per_unit換算で再計算）
- **per_unit_cycle_days (NUMERIC)** ← 1個あたり消費日数。auto時は購入毎に再計算、manual時は手動値で固定。参考自動値は別カラムを持たずpurchase_logsから都度集計
- next_order_date (DATE)
- deleted_at (TIMESTAMP)

### purchase_logs

- id (UUID)
- product_id (UUID, FK)
- price (NUMERIC)
- **pack_quantity (NUMERIC)** ← パック数
- **units_per_pack (NUMERIC)** ← 記録時点の入数（コピー保存）
- **total_units (NUMERIC)** ← pack_quantity × units_per_pack
- unit_price (NUMERIC) ← price / total_units
- **brand (TEXT, nullable)** ← v2.1追加。買った銘柄名（category scope時に銘柄を区別。product時は商品名と同一でよい）
- **purchase_url (TEXT, nullable)** ← v2.1追加。その購入で使ったURL。買い足し時の銘柄別ディープリンク用。履歴側に持つことで後から書き換わらない
- platform (TEXT) ← URLから判別
- purchased_at (TIMESTAMP)

> 底値・平均・直近などの価格指標はこのテーブルから都度集計（専用カラムは持たない）。platform は検索フィルタ用に保持。
> **【v2.1】** category scope時、買い足しUI用の「銘柄一覧」も brand でグルーピングして集計（銘柄名＋purchase_url＋最終購入日＋価格）。商品側 products.purchase_url との関係は実装時に整理（履歴側を正とする）。

### notifications

- id (UUID)
- user_id (UUID, FK)
- group_id (UUID, FK)
- title (TEXT)
- message (TEXT)
- is_read (BOOLEAN)
- **delivery_status (TEXT: 'sent' | 'failed' | 'expired')** ← 送信成否
- created_at (TIMESTAMP)

---

## 4. システム構成

- **Frontend**: Next.js（App Router）+ Mantine
- **Backend**: Next.js Server Actions + Supabase（Auth / DB / Storage）
- **Deploy**: Vercel
- **Batch処理**: Vercel Cron Jobs（**毎時実行** + notify_time一致判定）+ **Node.js Runtime**
    - Push送信は web-push ライブラリ（VAPID署名・暗号化を一括処理）を使用。Nodeのcrypto依存のためEdge Runtimeでは動かず、Edge Functions自体も非推奨化済みのため Node.js Runtime を採用。
- **Push送信**: web-push（Node.js）
    - **VAPID鍵**: `web-push generate-vapid-keys` で一度だけ生成し以後固定（変更すると全購読が無効化）。公開鍵はフロント（購読登録時）、**秘密鍵はVercel環境変数**（送信時の署名）。
- **KeepAlive**: 専用バッチ（GAS等）は不要。毎時の通知バッチ＋毎日のクリーンアップバッチがDBアクセスを発生させ続けるため、Supabase無料枠の7日休眠条件に自然と引っかからない。
    - 前提: 毎時バッチは対象有無に関わらず必ずDBクエリ（notify_time一致ユーザー検索）を投げる。クリーンアップバッチ（毎日DELETE）も確実にDBを触り、最低限の生存保証になる。
    - 補足: Vercel無料枠はCronジョブ1つ制限のため、毎時バッチとクリーンアップを1つのCronに統合して運用。

---

## 5. 運用ロジック詳細

### 5.1 購入サイクル自動更新

1. ユーザーが「買った」を登録（total_units を確定）。
2. 同一商品の前回 purchased_at と今回 purchased_at の差分（日数）を算出。
3. `per_unit_cycle_days = 購入間隔 ÷ 前回 total_units` を更新（cycle_mode='auto' の場合）。
4. `next_order_date = 今回購入日 + (per_unit_cycle_days × 今回 total_units)`。
5. 初回購入（実績0件）または通知OFFの場合は通知予約しない。status は idle へ。
6. 2回目以降の購入で status を tracking に遷移。

### 5.2 状態遷移

#### 状態一覧（type × status）

| type | status | 意味 | 通知 |
| --- | --- | --- | --- |
| recurring | pending | 買うべきリストに表示中（未購入）。新規/自動復帰/手動投入 | 対象 |
| recurring | tracking | サイクル自動稼働中（実績2回以上） | 対象 |
| recurring | idle | ストック十分。next_order_date を待つ | しない |
| spot | pending | 単発品をリストに入れた（未購入） | しない |
| spot | idle | 買い終えて眠る。手動で復帰可 | しない |
| spot | tracking | — ありえない | — |

#### 主な遷移

| From | To | トリガー |
| --- | --- | --- |
| （新規） | recurring/pending | 定期品を登録 or リスト追加 |
| （新規） | spot/pending | 単発品を登録 or リスト追加 |
| recurring/pending | recurring/idle | 「買った」（初回・実績0件、サイクル未確定） |
| recurring/pending | recurring/tracking | 「買った」（2回目・実績1件以上、サイクル確定） |
| recurring/idle | recurring/tracking | 2回目の購入でサイクル算出 |
| recurring/tracking | recurring/idle | 「買った」→ next_order_date 再計算 |
| recurring/idle, tracking | recurring/pending | next_order_date <= 今日（自動復帰） |
| recurring/idle | recurring/pending | 手動でリストに追加 |
| spot/pending | spot/idle | 「買った」（サイクル計算しない、purchase_logsあり） |
| spot/pending | spot/idle | 「引っ込める」（買わずに、purchase_logsなし） |
| spot/pending | （削除） | 「削除」（論理削除） |
| spot/idle | spot/pending | 手動でリストに追加 |
| recurring/pending ⇔ spot/pending | （横移動） | 種別変更（statusは保持） |
| recurring/idle ⇔ spot/idle | （横移動） | 種別変更（statusは保持） |
| **recurring/tracking** | **recurring/idle → 種別変更** | tracking中に単発化する場合、一旦idleに着地（履歴は残り、定期に戻せば即tracking復帰） |
| 各状態 | （削除） | 商品を論理削除（deleted_at） |

> **削除方針**: 削除は論理削除（deleted_at）で統一。履歴の有無で物理/論理を分岐しない。個人用ではレコードの膨らみは誤差のため対策不要（必要になれば後でクリーンアップバッチを追加可能）。
>
> **spot/pending の「やめる」UI**: 「削除」か「idleに引っ込める（また使うかも）」の2択。「引っ込める」は purchase_logs を作らずに spot/idle へ。「買った」との違いは履歴の有無で区別できる。
>
> **recurring/pending**: リストから外す操作は持たない（チェックリスト運用で買うまで居座る）。長期に止めたい場合はスヌーズ + 恒久ミュートで対応。

> status は purchase_logs の件数から半ば導出できる（購入記録を真実の源とする）。

### 5.3 通知・削除バッチフロー

#### 毎時（Vercel Cron）— 購入リマインド

```
現在時刻（UTC→各ユーザーtimezone変換）== notify_time のユーザーを対象に
  通知判定式を満たす商品を抽出
  → 1通にまとめて Web Push 送信（push_subscriptions の全行＝全デバイスへ）
  → notifications へ保存（delivery_status を記録）
  → 410/404 の行だけ削除。全行消えたらアプリ内告知
```

#### AM 3:00（Vercel Cron）— クリーンアップ

```sql
DELETE FROM notifications
WHERE created_at < NOW() - INTERVAL '7 days';
```

---

## 6. 将来の拡張性（iOSネイティブ移行）

- **API互換性**: Supabase共通基盤により、Swift（iOS）からSupabase SDK経由で同一DB / Authへアクセス可能。
- **通知トークン共存**: Web Push と APNs の両トークンを profiles で共存管理可能な設計。

---

## 7. 設計判断の確定状況

v1で「要設計」「要再確認」だった論点はすべて確定済み。

| 論点 | 確定内容 | 参照 |
| --- | --- | --- |
| 価格管理・底値の保持先 | 都度集計（最安unit_price）。全体底値のみ。過去買値ベース | 2.7 |
| cycle_mode の切り替えUI | 商品編集画面の一項目。手動時は自動値を初期値に。参考自動値を併記 | 2.4 |
| spot/pending の削除・リスト除外 | 「削除（論理削除）」か「idleに引っ込める」の2択。recurringは居座らせる | 5.2 |
| サブスクリプション管理 | 専用テーブルで複数デバイス。二段構え登録。手動再登録 | 2.1 / 2.9 |
| 送信の実装方式 | web-push（Node.js Runtime）。VAPID秘密鍵はVercel環境変数 | 4 |
| KeepAliveバッチの要否 | 不要。毎時/毎日バッチのDBアクセスで休眠回避（BAT-900/API-900は廃止） | 4 |
| 追跡単位（tracking_scope）【v2.1】 | カテゴリに product/category を持つ。集計導出で切り替えに強い。scope切替時pendingリセット | 2.10 |

### 今後の実装フェーズで詰める実務項目（設計判断ではなく実装詳細）

- service worker の実装（Push受信→バッジ更新→通知表示、Declarative Web Push対応の検討）
- RLS（Row Level Security）ポリシーの具体設計（group_id単位）
- ディープリンクのプラットフォーム別URLスキーム/ユニバーサルリンクの実値
- オンボーディング（PWAホーム画面追加の誘導）UIの作り込み
- 【v2.1】tracking_scope による分岐の実装（通知判定・サイクル算出・状態導出・買い物リストを product/category で出し分け）
- 【v2.1】category scope時の total_units / unit_price の銘柄横断集計（入数や単位が銘柄で異なる場合の正規化方針。例: 全て「1本」で揃うか、6本セットと1本が混在するか）
- 【v2.1】MVP対象外だった target_type（カテゴリ通知）は tracking_scope に置き換え済み。機能一覧・マトリクスの該当記述を整理

---

## 付録：v1からの主な削除・変更

- **削除（MVP対象外）**: グループ名変更、ユーザーメンテ、招待/削除（SCR-004/005、API-007〜009A）。権限制御は group_id 単位の最小限のみ。
- **変更**: BAT-001 を AM8:00固定 → 毎時実行 + notify_time一致 に置き換え。
- **追加**: 個数ベースのサイクル算出、商品3軸フラグ、スヌーズ、バッジ、送信ログ。
